--- a/solution/src/components/header/header.scss
+++ b/solution/src/components/header/header.scss
@@ -8,7 +8,7 @@
   align-items: center;
 
   width: 100%;
-  max-width: 375px;
+  // max-width: 375px;
 
   padding: $small-spacing $small-spacing;
 
