--- a/solution/src/components/main/main.scss
+++ b/solution/src/components/main/main.scss
@@ -3,6 +3,7 @@
 .main {
   padding: map-get($map: $spacers, $key: 4) $small-spacing 180px;
   background: white;
+  margin: 0 auto;
 }
 
 
